update features and steps test

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Este es un proyecto de pruebas con playwright y cucumber Javeriana Cali 2023",
   "main": "index.js",
   "scripts": {
-    "test": "npx cucumber-js -p test_runner --tags @demo & node ./htmlReportGenerator.js"
+    "test": "npx cucumber-js -p test_runner & node ./htmlReportGenerator.js"
   },
   "author": "",
   "license": "ISC",
